--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 body {
     color: #666666;
     background: #F6D155;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'K2D', sans-serif;
 }
 
 a {
