--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,8 @@
 body {
     color: #666666;
     background: #F6D155;
-    font-family: 'K2D', sans-serif;
+    //font-family: 'K2D', sans-serif;
+    font-family: 'Grape Nuts', cursive;
 }
 
 a {
